# mergedBasicBlock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  phasar_macros.cmake
include/: FunctionComparator_cp.h  MergedBB.h  MergedBBComparator.h
lib/: CMakeLists.txt  FunctionComparator_cp.cpp  MergedBB.cpp  MergedBBComparator.cpp
tools/: CMakeLists.txt  llvmEquiv.cpp
